@@ -71,6 +71,12 @@ class TestAdditional(unittest.TestCase):
         post = asm3.utils.PostedData(data, "en")
         asm3.additional.update_field_from_form(base.get_dbo(), "test", post)
 
+    def test_update_merge_animal(self):
+        asm3.additional.update_merge_animal(base.get_dbo(), 300, 400)
+
+    def test_update_merge_person(self):
+        asm3.additional.update_merge_person(base.get_dbo(), 300, 400)
+
     def test_save_values_for_link(self):
         asm3.additional.save_values_for_link(base.get_dbo(), asm3.utils.PostedData({}, "en"), "test", 0, "animal")
 
